# llm-inference-bench

./: .gitignore  CHANGELOG.md  README.md  llm_decode_bench.py  pyproject.toml
data/: mmlu_pro_1000.jsonl
llm_inference_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
